--- a/client/index_home.html
+++ b/client/index_home.html
@@ -10,7 +10,7 @@
     <div>
       <img
         id="image"
-        src=""
+        src="https://www.gstatic.com/android/market_images/web/play_prism_hlock_2x.png"
         width="100%"
         height="200"
       />
