--- a/client/index_home.html
+++ b/client/index_home.html
@@ -8,6 +8,7 @@
 
   <body>
     <div>
+      <p>Click on button and see the magic!</p>
       <img
         id="image"
         src="https://www.gstatic.com/android/market_images/web/play_prism_hlock_2x.png"
